# Dip

./: .flake8  .gitattributes  .gitignore  .travis.yml  AUTHORS  Dependencies  Externals  Externals.trunk  INSTALL  INSTALL.md  LICENSE  Makefile.am  Makefile.in  README  README.md  appveyor.yml  configure  configure.ac  format-all-sources.sh  get.dependencies.git.sh  get.dependencies.svn.sh  pyproject.toml  setup.py
0.82/: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  configure
0.82/Dip/: Makefile.in  configure  configure.ac  dip-uninstalled.pc.in
0.82/Dip/scripts/: Copyright  parse.atm.sh  parse.awk.sh
0.82/Dip/src/: AlpsDecompModel.h  AlpsDecompNodeDesc.h  AlpsDecompTreeNode.h  DecompAlgo.h  DecompAlgoCGL.cpp  DecompAlgoCGL.h  DecompAlgoD.cpp  DecompAlgoD.h  DecompAlgoPC.cpp  DecompAlgoPC.h  DecompAlgoRC.cpp  DecompAlgoRC.h  DecompApp.h  DecompBranch.cpp  DecompCut.h  DecompCutPool.h  DecompDebug.cpp  DecompMemPool.h  DecompModel.cpp  DecompStats.h  DecompVar.h  DecompVarPool.cpp  DecompVarPool.h  DecompWaitingRow.h  UtilKnapsack.cpp  UtilKnapsack.h  UtilMacrosDecomp.cpp  UtilParameters.cpp  UtilParameters.h  config.h.in  config_default.h
0.82/conf/: perms.txt
0.82/doxydoc/Cbc/: doxygen.conf
0.82/doxydoc/Clp/: doxygen.conf
0.82/doxydoc/CoinUtils/: doxygen.conf
0.82/doxydoc/Osi/: doxygen.conf
0.82/doxydoc/all/: doxygen.conf
0.82/share/: config.site
Decomp/: Makefile.in  configure  configure.ac
Decomp/data/ATM/: atm.pc.parm
Decomp/data/GAP/: ReadMe2.txt
Decomp/data/SSR/: data.tgz
Decomp/examples/: Makefile.Examples.in
Decomp/examples/AP3/: AP3_DecompApp.h  AP3_DecompParam.h  ap3.parm.in
Decomp/examples/ATM/: ATM_Instance.h  ATM_Main.cpp  ATM_Param.h
Decomp/examples/GAP/: GAP_DecompApp.cpp  GAP_DecompApp.h  GAP_DecompParam.h  GAP_Instance.cpp  GAP_Instance.h  README.txt.in  data_extract.sh.in  gap.parm.in
Decomp/examples/MAD/: MAD_DecompParam.h  MAD_DecompSolution.h  Makefile.in  ReadMe.txt
Decomp/examples/MILP/: MILP_DecompApp.cpp  MILP_Main.cpp  Makefile.in  milp.parm.in
Decomp/examples/MILPBlock/: README.txt.in  milpblock.parm.in  milpblock.parm2.in
Decomp/examples/MMKP/: MMKP_MCKnap.h  MMKP_Model.h  MMKP_Param.h  MMKP_Status.h  Makefile.in  mmkp.parm.in
Decomp/examples/TSP/: Makefile.in  TSP_Boost.h  TSP_DecompApp.cpp  TSP_DecompApp.h  TSP_Instance.h  TSP_Main.cpp  TSP_Param.h  TSP_SubtourCut.cpp
Decomp/examples/VRP/: VRP_Boost.h  VRP_Concorde.h  VRP_DecompApp.cpp  VRP_GSECCut.cpp  VRP_GSECCut.h  VRP_Instance.h  VRP_Main.cpp
Decomp/inc/: config_decomp.h.in
Decomp/scripts/: parse.atm.sh  parse2.awk.retail.sh
Decomp/src/: AlpsDecompNodeDesc.h  AlpsDecompParam.h  AlpsDecompTreeNode.cpp  AlpsDecompTreeNode.h  DecompAlgo.h  DecompAlgoCGL.h  DecompAlgoPC.cpp  DecompApp.cpp  DecompConstraintSet.h  DecompCutPool.h  DecompDebug.cpp  DecompMemPool.h  DecompSolution.h  DecompSolverResult.h  DecompStats.cpp  DecompStats.h  Makefile.am  Makefile.in  TODO  UtilGraphLib.cpp  UtilHash.h  UtilKnapsack.h  UtilMacros.cpp  UtilMacros.h  UtilParameters.h
Decomp/src/old/: BcpsDecompSolution.cpp  DecompAlgo.h  DecompAlgo.old.cpp  DecompAlgoC.cpp  DecompConstraintSet.h  DecompParam.h  DecompTypes.h  DecompVar.cpp  Makefile.in  OsiNullSolverInterface.hpp  UtilPortable.h.OLD
Decomp/test/: Makefile.in
Dip/: AUTHORS  MANIFEST.in  Makefile.am  Makefile.in  README  README.md  README.rst  configure  configure.ac  decomp_addlibs.txt.in  dip-uninstalled.pc.in  dip.pc.in  pyproject.toml  setup.py
Dip/bugs/: PRICE_AND_CUT_subProb_relax0.n0.c0.p0.b0.lp  main.cpp
Dip/bugs/OsiCbc/: main.cpp  tmp.mps
Dip/data/AP3/: Grundel.tgz  README.md  Saltzman.tgz  get.data
Dip/data/ATM/: ReadMe.txt  ampl.tgz  atm.direct.parm  atm.direct.sh  atm.opt  atm.pc.sh  atm_rand.tgz  get.data  original.tgz
Dip/data/GAP/: ReadMe.txt  gap.opt  get.data
Dip/data/MAD/: madlib.opt.xls  unzip.sh
Dip/data/MCF/: get.data
Dip/data/MEWCP/: README.md  ReadMe.txt  maxclique_data.txt
Dip/data/MMKP/: mmkp.opt
Dip/data/SDPUC/: get.data
Dip/data/TSP/: get.data
Dip/data/VRP/: vrplib.tgz
Dip/doc/guide/: abstract.tex  binpack.tex  branch.tex  coke.tex  column.tex  commands.tex  compare.m  concl.tex  cuts.tex  cutting_stock.tex  define.tex  dippy.ps  dippy.tcp  dippy.tex  dpf.m  heuristics.tex  intro.tex  latex.py  master.bib  myacronym.sty  overview.tex  refer.bib  report-title.ps  report-title.tex  starting.tex  techs.tex  tsp.tex  tsp_figs.m  wedding.tex
Dip/examples/: Makefile.Examples.in
Dip/examples/AP3/: AP3_DecompApp.cpp  AP3_DecompApp.h  AP3_DecompParam.h  AP3_Instance.h  AP3_Main.cpp  Makefile.in
Dip/examples/ATM/: ATM_DecompApp.cpp  ATM_DecompApp.h  ATM_Instance.cpp  ATM_Instance.h  ATM_Main.cpp  ATM_Param.h  Makefile.in  atm.parm.in  data_extract.sh.in  notes.txt
Dip/examples/DIP/: DecompMain.cpp  Makefile.in  data_extract.sh.in
Dip/examples/Dippy/: README  bin_pack_func.py  bin_pack_instance.py  bin_pack_instance2.py  facility_ex1.py  (+3 more)
Dip/inc/: config_decomp.h.in  config_dip.h.in
Dip/scripts/: average.awk  copyright_add.sh  formatCode.sh  get.dip_test.sh  get.hmetis.sh  get.patoh.sh  get.test_data.sh  parse.atm.sh  parse.awk.retail.sh  parse.awk.sh  parse.retail.sh  parse2.awk.retail.sh  parse2.awk.sh  plot_bounds.py
Dip/src/: AlpsDecompModel.cpp  AlpsDecompModel.h  AlpsDecompNodeDesc.h  AlpsDecompParam.h  AlpsDecompSolution.h  AlpsDecompTreeNode.cpp  AlpsDecompTreeNode.h  Decomp.h  DecompAlgo.cpp  DecompAlgo.h  DecompAlgoC.cpp  DecompAlgoC.h  DecompAlgoCGL.cpp  DecompAlgoCGL.h  DecompAlgoD.cpp  DecompAlgoD.h  DecompAlgoPC.cpp  DecompAlgoPC.h  DecompAlgoRC.cpp  DecompAlgoRC.h  DecompApp.cpp  DecompApp.h  DecompBranch.cpp  DecompBranchObject.h  DecompBranchStrategy.cpp  DecompBranchStrategy.h  DecompBranchStrategyMaxInf.cpp  DecompBranchStrategyMaxInf.h  DecompConfig.h  DecompConstraintSet.cpp  DecompConstraintSet.h  DecompCut.cpp  DecompCut.h  DecompCutOsi.h  DecompCutPool.cpp  DecompCutPool.h  DecompDebug.cpp  DecompMain.cpp  DecompMemPool.h  DecompModel.cpp  (+42 more)
Dip/test/: Makefile.am  Makefile.in  benchmark.py  benchmark.solu  requirements.txt
(+621 files in other folders)
